# hass-ds18b20

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
